<resources>
    <string name="app_name">AppDailyGoals</string>
    <string name="othergoalstring">othergoal</string>
    <string name="Appname">DailyGoals</string>
    <string name="Date">CurrentDate</string>
    <string name="firstgoal">firstgoaltext</string>
    <string name="othergoal">othergoaltext</string>
    <string name="icontodostring">icontodo</string>
    <string name="iconkalender">Kalender</string>
    <string name="seriesString">Current Series:</string>
    <string name="seriesPoints">pts</string>
    <string name="goalNameString">Name</string>
    <string name="motivationString">Motivation</string>
    <string name="notificationString">Allow Notification</string>
    <string name="cancelString">Cancel</string>
    <string name="saveString">Save</string>
</resources>
